.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/CRMfusionDBR101__Convert_Display_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>A list of fields to be displayed in the conversion tool for each object (Lead, Account and Contact).</description>
    <fields>
        <fullName>CRMfusionDBR101__Field__c</fullName>
        <description>Field API name.</description>
        <label>Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Object__c</fullName>
        <description>Lead, account or contact</description>
        <label>Object</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DupeBlocker Convert Display Fields</label>
</CustomObject>